--- a/Web.config
+++ b/Web.config
@@ -5,12 +5,12 @@
   -->
 <configuration>
   <configSections>
-    
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=IVORY\SQLEXPRESS; Initial Catalog=aspStoreDb;Integrated Security=True" providerName="System.Data.SqlClient" />
-	  <add name="StoreContext" connectionString="Data Source=IVORY\SQLEXPRESS; Initial Catalog=aspStoreDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="StoreContext" connectionString="Data Source=X13\SQLEXPRESS; Initial Catalog=aspStoreDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
   </appSettings>
