added get by cateogory controller

--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=IVORY\SQLEXPRESS; Initial Catalog=aspStoreDb;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="StoreContext" connectionString="Data Source=X13\SQLEXPRESS; Initial Catalog=aspStoreDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="StoreContext" connectionString="Data Source=IVORY\SQLEXPRESS; Initial Catalog=StoreDb;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
   </appSettings>
