--- a/AspStoreBackend.csproj
+++ b/AspStoreBackend.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Controllers\LocationController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\SalesController.cs" />
+    <Compile Include="Controllers\StoreController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
